--- a/style.css
+++ b/style.css
@@ -1,21 +1,20 @@
 body {
     color: white;
-    background-color: black ;: ;
+    background: black;
     margin: 0px;
     font-family: "Chakra Petch", sans-serif;
     margin-bottom: 100px;
 }
 
 header {
-    border-bottom: solid 2px rgb(244, 246, 248);
+    border-bottom: solid 2px rgb(42, 122, 228);
     padding: 20px;
     font-size: 32px;
-    color:black
-    
+    color: rgb(42, 122, 228);
 }
 
 .chamada {
-    background: rgb(180, 122, 241);
+    background: rgb(184, 156, 213);
     padding-bottom: 80px;
     padding-top: 80px;
     display: flex;
